--- a/page1.html
+++ b/page1.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
-  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -43,7 +42,7 @@
                 In This Guide We Will,</h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">Discuss how to turn regular replace cars into addon DLC packs. We recommend you follow the YouTube video and download everything before getting started.<br></p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-secondary display-4" href="page2.html#content4-b">Follow the Guide</a>
-                <a class="btn btn-md btn-primary display-4" href="https://mobirise.co">Watch The Video</a></div>
+                <a class="btn btn-md btn-primary display-4" href="whoops.html">Watch The Video</a></div>
         </div>
     </div>
 
