--- a/page3.html
+++ b/page3.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -114,7 +113,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="whoops.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -130,7 +129,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="whoops.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -158,7 +157,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="whoops.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -174,7 +173,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="whoops.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -190,7 +189,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="whoops.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -218,7 +217,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="whoops.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -234,7 +233,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="whoops.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -250,7 +249,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="whoops.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
