--- a/whoops.html
+++ b/whoops.html
@@ -11,13 +11,13 @@
   
   
   <title>broken</title>
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/facebook-plugin/style.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/tether/tether.min.css">
+  <link rel="stylesheet" href="http://simplemodding.tk/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://simplemodding.tk/assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="http://simplemodding.tk/assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="http://simplemodding.tk/assets/facebook-plugin/style.css">
+  <link rel="stylesheet" http://simplemodding.tk/assets/tether/tether.min.css">
   <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/theme/css/style.css">
-  <link rel="preload" as="style" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="http://simplemodding.tk/assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="http://simplemodding.tk/assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
