--- a/whoops.html
+++ b/whoops.html
@@ -11,13 +11,13 @@
   
   
   <title>broken</title>
-  <link rel="stylesheet" href="http://simplemodding.tk/assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="http://simplemodding.tk/assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="http://simplemodding.tk/assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="http://simplemodding.tk/assets/facebook-plugin/style.css">
-  <link rel="stylesheet" http://simplemodding.tk/assets/tether/tether.min.css">
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/theme/css/style.css">
-  <link rel="preload" as="style" href="http://simplemodding.tk/assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="http://simplemodding.tk/assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/facebook-plugin/style.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
@@ -74,7 +74,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Zst3Qj1t3WnadNU+wkkhsUZ4IEoJ97TtStK80cIDYTpVrZnvt7VAK1wZYOEML3ohBcPqr0oyRVj1sJ7QeXGFy+5q6hb0GiI1HkLeDpVhJU1ALsJRJEc0TbYj6IlFPAgD">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="U52TNDrBRSMtrrr9JTo15MzOZSO5tCNpJaA7rFm+ZwcrE3mJT3TzdeWUao62RlH4tkYZLmUPf+KQRdFPT9O7CSFeE4yLTfPJflM93/a4EJLauQ09G7FLYv+BuxVAoKCR">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for helping to improve our site!!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -99,16 +99,16 @@
 </section>
 
 
-  <script src="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/popper/popper.min.js"></script>
-  <script src="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <script src="assets/popper/popper.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5"></script>
   <script src="https://apis.google.com/js/plusone.js"></script>
-  <script src="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/facebook-plugin/facebook-script.js"></script>
-  <script src="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/tether/tether.min.js"></script>
-  <script src="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/theme/js/script.js"></script>
-  <script src="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/formoid/formoid.min.js"></script>
+  <script src="assets/facebook-plugin/facebook-script.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/theme/js/script.js"></script>
+  <script src="assets/formoid/formoid.min.js"></script>
   
   
 </body>
