--- a/page3.html
+++ b/page3.html
@@ -31,15 +31,7 @@
 
 
 <!-- Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165584933-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-165584933-1');
-</script>
+ga('set', 'userId', 'USER_ID'); // Set the user ID using signed-in user_id.
 <!-- /Analytics -->
 
 
