--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 	
 	
-	<div><div class="modal fade" id="updates" tabindex="-1" role="dialog" aria-labelledby="updatesLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="updatesLabel">Updates</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="updates_body">Great news, our first guide is up, YAY!!</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div><div class="mbr-section-btn"><a href="https://simplemodding.tk/page1.html" class="no-anim btn btn-primary display-4" target="_new">View It Here!!</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#updates").on("hidden.bs.modal", function () {    var html = $( "#updates_body" ).html();    $( "#updates_body" ).empty();    $( "#updates_body" ).append(html);  })});</script></div>
+	<div><div class="modal fade" id="updates" tabindex="-1" role="dialog" aria-labelledby="updatesLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="updatesLabel">Updates</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="updates_body">If the webiste appears broken, turn off Ad Block. We do not have ads, so you can turn it off with no worries.</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#updates").on("hidden.bs.modal", function () {    var html = $( "#updates_body" ).html();    $( "#updates_body" ).empty();    $( "#updates_body" ).append(html);  })});</script></div>
 
 	<script>
 	if (typeof OpenModal === 'undefined') {
@@ -151,7 +151,13 @@
 
 </section><script>
 document.addEventListener("DOMContentLoaded", function() {
-  setTimeout( function() { OpenModal("updates"); } , 0);
+  if (modalGetCookie("updates_viewed") == "") {
+    setTimeout( function() {
+      
+        modalSetCookie("updates_viewed", true, 3600);
+      OpenModal("updates");
+    } , 0);
+  }
 });
 </script>
 
